common class files project + kafka working properly with STOMP